--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a rel="nofollow" rel="noreferrer" href="#section_about">問題 PROBLEM</a></li>
         <li><a rel="nofollow" rel="noreferrer" href="#section_story">方法 SOLUTION</a></li>
         <li><a rel="nofollow" rel="noreferrer" href="#section_future">特色 FEATURE</a></li>
-        <li><a rel="nofollow" rel="noreferrer" href="https://goo.gl/forms/FDXCfG4wFANfAQnE2" target="_blank">協助我們</a></li>
+        <li><a rel="nofollow" rel="noreferrer" href="https://www.surveycake.com/s/aqrXM" target="_blank">協助我們</a></li>
       </div>
     </div>
   </div>
