--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <div class="container">
     <h2 id="fontshadow_b">請協助我們填寫問卷，讓功能更加完善！</h2>
     <hr/>
-    <form action="https://goo.gl/forms/FDXCfG4wFANfAQnE2" target="_blank">
+    <form action="https://www.surveycake.com/s/aqrXM" target="_blank">
       <button class="btn btn-default">填問卷</button>
     </form>
   </div>
